import org.gradle.accessors.dm.LibrariesForLibs

plugins {
  id 'cpp'
  id 'java'
  id 'google-test'
  id 'edu.wpi.first.wpilib.repositories.WPILibRepositoriesPlugin' version '2025.0'
  id 'edu.wpi.first.NativeUtils' version '2026.0.1'
  id 'edu.wpi.first.GradleJni' version '1.2.0'
  id 'edu.wpi.first.GradleVsCode' version '2.1.0'
}

def libs = project.extensions.getByType(LibrariesForLibs)
ext.athenaVersions = [
  wpilib        : libs.versions.wpilib.get(),
  photonlib     : libs.versions.photonlib.get(),
  photontargeting: libs.versions.photontargeting.get(),
  ctre          : libs.versions.ctre.get(),
  pathplanner   : libs.versions.pathplanner.get(),
  choreo        : libs.versions.choreo.get(),
  rev           : libs.versions.rev.get(),
  studica       : libs.versions.studica.get(),
  jackson       : libs.versions.jackson.get(),
  ejml          : libs.versions.ejml.get(),
  opencv        : libs.versions.opencv.get(),
]
ext.wpilibVersion = athenaVersions.wpilib

java {
    sourceCompatibility = "17"
    targetCompatibility = "17"
}


allprojects {
  repositories {
    mavenLocal()
    mavenCentral()
    maven { url 'https://maven.ctr-electronics.com/release/' }
    maven { url 'https://maven.revrobotics.com/' }
    maven { url 'https://3015rangerrobotics.github.io/pathplannerlib/repo'}
    maven { url 'https://frcmaven.wpi.edu/artifactory/sleipnirgroup-mvn-release/'}
    maven { url 'https://maven.photonvision.org/repository/internal' }
    maven { url 'https://maven.photonvision.org/repository/snapshots' }
    maven {
      url 'https://dev.studica.com/maven/release/2026/'
      content {
        includeGroup 'com.studica.frc'
      }
    }
  }
}

allprojects { proj ->
  if (rootProject.hasProperty('releaseMode')) {
    wpilibRepositories.addAllReleaseRepositories(proj)
  } else {
    wpilibRepositories.addAllDevelopmentRepositories(proj)
  }
}

// Apply C++ configuration
apply from: 'config.gradle' 

// Apply Java configuration
dependencies {
    implementation project(':athena-core')
    implementation "edu.wpi.first.cscore:cscore-java:${athenaVersions.wpilib}"
    implementation "edu.wpi.first.cameraserver:cameraserver-java:${athenaVersions.wpilib}"
    implementation "edu.wpi.first.ntcore:ntcore-java:${athenaVersions.wpilib}"
    implementation "edu.wpi.first.wpilibj:wpilibj-java:${athenaVersions.wpilib}"
    implementation "edu.wpi.first.wpiutil:wpiutil-java:${athenaVersions.wpilib}"
    implementation "edu.wpi.first.wpimath:wpimath-java:${athenaVersions.wpilib}"
    implementation "edu.wpi.first.apriltag:apriltag-java:${athenaVersions.wpilib}"
    implementation "edu.wpi.first.wpiunits:wpiunits-java:${athenaVersions.wpilib}"
    implementation "edu.wpi.first.wpilibNewCommands:wpilibNewCommands-java:${athenaVersions.wpilib}"
    implementation "edu.wpi.first.hal:hal-java:${athenaVersions.wpilib}"
    implementation "org.ejml:ejml-simple:${athenaVersions.ejml}"
    implementation "com.fasterxml.jackson.core:jackson-annotations:${athenaVersions.jackson}"
    implementation "com.fasterxml.jackson.core:jackson-core:${athenaVersions.jackson}"
    implementation "com.fasterxml.jackson.core:jackson-databind:${athenaVersions.jackson}"
    implementation "edu.wpi.first.thirdparty.frc2025.opencv:opencv-java:${athenaVersions.opencv}"

    implementation "org.photonvision:photonlib-java:${athenaVersions.photonlib}"
    implementation "org.photonvision:photontargeting-java:${athenaVersions.photontargeting}"
    implementation "com.ctre.phoenix6:wpiapi-java:${athenaVersions.ctre}"
    implementation "com.pathplanner.lib:PathplannerLib-java:${athenaVersions.pathplanner}"
    implementation "com.revrobotics.frc:REVLib-java:${athenaVersions.rev}"
    implementation "choreo:ChoreoLib-java:${athenaVersions.choreo}"
    // implementation "com.studica.frc:Studica-java:${athenaVersions.studica}"
}

// Set up exports properly
nativeUtils {
  exportsConfigs {
    // Main library is just default empty. This will export everything
    Vendor {
    }
  }
  privateExportsConfigs {
    // Only export explicit symbols from driver library
    VendorDriver {
      exportsFile = project.file("src/main/driver/symbols.txt")
    }
  }
}


model {
  components {
    // Vendor(NativeLibrarySpec) {
    //   sources {
    //     // cpp {
    //     //   source {
    //     //     srcDirs 'src/main/native/cpp'
    //     //     include '**/*.cpp'
    //     //   }
    //     //   exportedHeaders {
    //     //     srcDirs 'src/main/native/include'
    //     //   }
    //     // }
    //   }
    //   binaries.all {
    //     lib library: 'VendorDriver', linkage: 'shared'
    //   }
    //   nativeUtils.useRequiredLibrary(it, 'wpilib_shared')
    // }

    // VendorDriver(JniNativeLibrarySpec) {
    //   enableCheckTask true
    //   javaCompileTasks << compileJava
    //   jniCrossCompileOptions << JniCrossCompileOptions(nativeUtils.wpi.platforms.roborio)
    //   // Leave these for future proofing
    //   jniCrossCompileOptions << JniCrossCompileOptions(nativeUtils.wpi.platforms.linuxarm32)
    //   jniCrossCompileOptions << JniCrossCompileOptions(nativeUtils.wpi.platforms.linuxarm64)
    //   // sources {
    //   //   cpp {
    //   //     source {
    //   //       srcDirs 'src/main/driver/cpp'
    //   //       include '**/*.cpp'
    //   //     }
    //   //     exportedHeaders {
    //   //       srcDirs 'src/main/driver/include'
    //   //     }
    //   //   }
    //   // }

    //   nativeUtils.useRequiredLibrary(it, "driver_shared")
    // }
  }
  testSuites {
    // VendorTest {
    //     sources.cpp {
    //         source {
    //             srcDir 'src/test/native/cpp'
    //             include '**/*.cpp'
    //         }
    //     }

    //     binaries.all {
    //       lib library: 'VendorDriver', linkage: 'shared'
    //     }

    //     nativeUtils.useRequiredLibrary(it, "wpilib_executable_shared", "googletest_static")
    // }

    // VendorDriverTest {
    //     sources.cpp {
    //         source {
    //             srcDir 'src/test/driver/cpp'
    //             include '**/*.cpp'
    //         }
    //     }

    //     nativeUtils.useRequiredLibrary(it, "wpilib_executable_shared", "googletest_static")
    // }
  }
}

apply from: 'publish.gradle'

wrapper {
  gradleVersion '8.5'
}
